--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "prisma generate",
+    "start": "prisma generate && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
