--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "cloud-vault",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build": "prisma generate",
     "start": "prisma generate && node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
